--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,25 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>This is FRONTEND</title>
+	<link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Montserrat:wght@100;200;400&family=Play&family=Poppins:ital,wght@0,100;0,200;0,500;0,700;0,800;1,100&family=Tajawal:wght@200&family=Titillium+Web:wght@200&display=swap" rel="stylesheet"> 
+    <title>UI-Build-2</title>
 </head>
 <body>
-	<div id="root"></div>
+	<section>
+		<div class="circle1"></div>
+		<div class="circle2"></div>
+		<div class="circle3"></div>
+		<div class="circle4"></div>
+
+		<button>
+			<h1>beautiful type</h1>
+		</button>
+
+
+</section>
+
 </body>
 </html>
